2005-08-15  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag2rw.cc (jtag2::jtagRead()): when word-aligning flash
	ROM requests, do also align the request base, and return the
	correct byte(s).

2005-06-20  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/devdescr.cc: add device flags.
	* src/jtag.h: add device flags, move mkI breakpoints out to jtag1.h.
	* src/jtag1.h: mkI breakpoint interface goes here.
	* src/jtag2.h: new mkII breakpoint interface.
	* src/jtag2bp.cc: ditto.
	* src/jtag2run.cc: ditto.
	* src/jtag2rw.cc: Attempt to get the "load" command working.
	* src/jtagbp.cc: remove stale "e" packet code (step-over-range-packet).
	* src/jtagrun.cc: ditto.
	* src/remote.cc: ditto.
	* scripts/gdb-avarice-script: ditto.

2005-05-31  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag.h: remove friend restoreSerialPort() which doesn't
	exist at all.

2005-05-27  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Merge the JTAG ICE mkII branch back to HEAD.
	* src/jtag2.h: (new file)
	* src/jtag2_defs.h: (new file)
	* src/jtag2bp.cc: (new file)
	* src/jtag2io.cc: (new file)
	* src/jtag2misc.cc: (new file)
	* src/jtag2prog.cc: (new file)
	* src/jtag2run.cc: (new file)
	* src/jtag2rw.cc: (new file)
	* src/crc16.c: (new file)
	* src/crc16.h: (new file)
	* Bootstrap: Export AUTO* variables.
	* configure.ac: Bump version.
	* doc/avarice.1: (Merge)
	* doc/dev_desc.txt: (Merge)
	* doc/mk2-protocol.txt: (Merge)
	* src/Makefile.am: (Merge)
	* src/devdescr.cc: (Merge)
	* src/jtag.h: (Merge)
	* src/jtag1.h: (Merge)
	* src/jtaggeneric.cc: (Merge)
	* src/jtagio.cc: (Merge)
	* src/jtagprog.cc: (Merge)
	* src/jtagrw.cc: (Merge)
	* src/main.cc: (Merge)
	* src/remote.cc: (Merge)

2005-05-24  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/devdescr.cc: Add IO register entries for ATmega64/128 & CAN128
	* src/ioreg.cc: Ditto.
	* src/ioreg.h: Ditto.

2005-05-13  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Encapsulate the mkI protocol in its own C++ class.
	* src/Makefile.am: ditto.